--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <title>Login | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/main.js"></script>
-  <script type="module" src="js/auth.js" defer></script>
+  <script src="js/auth.js" defer></script>
 </head>
 <body>
   <header class="site-header">
@@ -17,27 +17,23 @@
         <a href="booking.html">Book</a>
         <a href="login.html" class="active">Login</a>
         <a href="admin.html">Dashboard</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
       </nav>
       <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </div>
   </header>
 
   <section class="container form-section">
-    <h2>Login or Sign Up</h2>
+    <h2>Admin Login</h2>
     <form id="authForm">
       <label>Email <input type="email" id="authEmail" required /></label>
       <label>Password <input type="password" id="authPassword" required /></label>
-      <button id="loginBtn" class="btn">Login</button>
-      <button id="signupBtn" class="btn-outline" type="button">Sign Up</button>
+      <button id="loginBtn" class="btn" type="submit">Login</button>
+      <p id="errorMsg" style="color:red;"></p>
     </form>
   </section>
 
   <footer class="footer">
     <p>© 2025 Mautours</p>
   </footer>
-
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
 </body>
 </html>
