--- a/admin.html
+++ b/admin.html
@@ -17,9 +17,8 @@
         <a href="booking.html">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html" class="active">Dashboard</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
       </nav>
+      <button id="logoutBtn" class="btn-small">Logout</button>
       <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </div>
   </header>
@@ -52,7 +51,5 @@
   <footer class="footer">
     <p>© 2025 Mautours</p>
   </footer>
-
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
 </body>
 </html>
