--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
       <h1 class="logo">Mautours</h1>
       <nav class="nav" id="navMenu">
         <a href="index.html" class="active">Home</a>
-        <a href="#excursions">Book</a>
+        <a href="booking.html">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html">Dashboard</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
       </nav>
       <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </div>
@@ -30,30 +28,27 @@
     </div>
   </section>
 
-  <section id="excursions" class="excursions container">
+  <section class="excursions container">
     <h2>Popular Excursions</h2>
     <div class="cards">
       <div class="card">
         <img src="assets/ile.jpg" alt="Île aux Cerfs" />
         <h3>Île aux Cerfs Catamaran</h3>
         <p>Full-day cruise with BBQ lunch and snorkeling.</p>
-        <span class="price">MUR 1000</span>
         <a href="booking.html?excursion=Île aux Cerfs Catamaran&price=1000" class="btn">Book Now</a>
       </div>
 
       <div class="card">
-        <img src="assets/wildsouth.jpg" alt="Wild South" />
+        <img src="assets/wildsouth.jpg" alt="Wild South Discovery" />
         <h3>Wild South Discovery</h3>
-        <p>Grand Bassin, Chamarel, and Seven Coloured Earth.</p>
-        <span class="price">MUR 1500</span>
+        <p>Explore Chamarel, Seven Coloured Earth, and more.</p>
         <a href="booking.html?excursion=Wild South Discovery&price=1500" class="btn">Book Now</a>
       </div>
 
       <div class="card">
         <img src="assets/transfer.jpg" alt="Airport Transfer" />
         <h3>Airport Transfer</h3>
-        <p>Private transfers anywhere in Mauritius with comfort.</p>
-        <span class="price">MUR 800</span>
+        <p>Comfortable private transfers anywhere in Mauritius.</p>
         <a href="booking.html?excursion=Airport Transfer&price=800" class="btn">Book Now</a>
       </div>
     </div>
