--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <title>Login | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/main.js"></script>
-  <script src="js/auth.js" defer></script>
+  <script type="module" src="js/auth.js" defer></script>
 </head>
 <body>
   <header class="site-header">
@@ -23,17 +23,19 @@
   </header>
 
   <section class="container form-section">
-    <h2>Admin Login</h2>
+    <h2>Login or Sign Up</h2>
     <form id="authForm">
       <label>Email <input type="email" id="authEmail" required /></label>
       <label>Password <input type="password" id="authPassword" required /></label>
-      <button id="loginBtn" class="btn" type="submit">Login</button>
-      <p id="errorMsg" style="color:red;"></p>
+      <button id="loginBtn" class="btn">Login</button>
+      <button id="signupBtn" class="btn-outline" type="button">Sign Up</button>
     </form>
   </section>
 
   <footer class="footer">
     <p>© 2025 Mautours</p>
   </footer>
+
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
 </body>
 </html>
