--- a/admin.html
+++ b/admin.html
@@ -18,30 +18,22 @@
         <a href="login.html">Login</a>
         <a href="admin.html" class="active">Dashboard</a>
       </nav>
-      <button id="logoutBtn" class="btn-small">Logout</button>
       <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </div>
   </header>
 
   <section class="container">
-    <h2>Admin Dashboard</h2>
-    <p>Manage bookings and view total revenue</p>
-
-    <div class="stats-box">
-      <h3>Total Revenue: <span id="totalRevenue">MUR 0</span></h3>
-    </div>
-
+    <h2>All Bookings</h2>
     <table id="bookingsTable">
       <thead>
         <tr>
           <th>Name</th>
           <th>Email</th>
           <th>Excursion</th>
+          <th>Price (MUR)</th>
           <th>Date</th>
           <th>People</th>
-          <th>Price (MUR)</th>
           <th>Status</th>
-          <th>Action</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -51,5 +43,7 @@
   <footer class="footer">
     <p>© 2025 Mautours</p>
   </footer>
+
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
 </body>
 </html>
