--- a/success.html
+++ b/success.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Payment Success | Mautours</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="container center" style="margin-top: 80px;">
+  <div class="container center" style="margin-top: 100px;">
     <h2>🎉 Payment Successful!</h2>
     <p>Thank you for booking with Mautours.</p>
-    <p>We’ll send you a confirmation email shortly.</p>
+    <p>We’ll send your confirmation shortly.</p>
     <a href="index.html" class="btn" style="margin-top: 20px;">Back to Home</a>
   </div>
 </body>
