--- a/login.html
+++ b/login.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | Mautours</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/main.js"></script>
+  <link rel="stylesheet" href="css/style.css">
   <script type="module" src="js/auth.js" defer></script>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container between">
-      <h1 class="logo">Mautours</h1>
-      <nav class="nav" id="navMenu">
-        <a href="index.html">Home</a>
-        <a href="booking.html">Book</a>
-        <a href="login.html" class="active">Login</a>
-        <a href="admin.html">Dashboard</a>
-      </nav>
-      <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
-    </div>
-  </header>
-
   <section class="container form-section">
     <h2>Login or Sign Up</h2>
     <form id="authForm">
-      <label>Email <input type="email" id="authEmail" required /></label>
-      <label>Password <input type="password" id="authPassword" required /></label>
+      <label>Email <input type="email" id="authEmail" required></label>
+      <label>Password <input type="password" id="authPassword" required></label>
       <button id="loginBtn" class="btn">Login</button>
       <button id="signupBtn" class="btn-outline" type="button">Sign Up</button>
     </form>
@@ -36,6 +22,6 @@
     <p>© 2025 Mautours</p>
   </footer>
 
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
 </body>
 </html>
