--- a/login.html
+++ b/login.html
@@ -3,24 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | Mautours</title>
+  <title>Booking Successful | Mautours</title>
   <link rel="stylesheet" href="css/style.css">
-  <script type="module" src="js/auth.js" defer></script>
 </head>
 <body>
-  <section class="container form-section">
-    <h2>Login or Sign Up</h2>
-    <form id="authForm">
-      <label>Email <input type="email" id="authEmail" required></label>
-      <label>Password <input type="password" id="authPassword" required></label>
-      <button id="loginBtn" class="btn">Login</button>
-      <button id="signupBtn" class="btn-outline" type="button">Sign Up</button>
-    </form>
-  </section>
-
-  <footer class="footer">
-    <p>© 2025 Mautours</p>
-  </footer>
+  <div class="container center">
+    <h1>🎉 Payment Successful!</h1>
+    <p>Thank you for booking with Mautours.</p>
+    <a href="index.html" class="btn">Back to Home</a>
+  </div>
 
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
 </body>
