--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mautours – Mauritius Excursions & Transfers</title>
   <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/main.js"></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="container between">
+    <div class="container">
       <h1 class="logo">Mautours</h1>
-      <nav class="nav" id="navMenu">
-        <a href="index.html" class="active">Home</a>
+      <nav class="nav">
+        <a href="index.html">Home</a>
         <a href="booking.html">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html">Dashboard</a>
       </nav>
-      <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </div>
   </header>
 
@@ -35,21 +33,21 @@
         <img src="assets/ile.jpg" alt="Île aux Cerfs" />
         <h3>Île aux Cerfs Catamaran</h3>
         <p>Full-day cruise with BBQ lunch and snorkeling.</p>
-        <a href="booking.html?excursion=Île aux Cerfs Catamaran&price=1000" class="btn">Book Now</a>
+        <a href="booking.html?excursion=Île aux Cerfs Catamaran" class="btn">Book Now</a>
       </div>
 
       <div class="card">
-        <img src="assets/wildsouth.jpg" alt="Wild South Discovery" />
+        <img src="assets/wildsouth.jpg" alt="Wild South" />
         <h3>Wild South Discovery</h3>
-        <p>Explore Chamarel, Seven Coloured Earth, and more.</p>
-        <a href="booking.html?excursion=Wild South Discovery&price=1500" class="btn">Book Now</a>
+        <p>Grand Bassin, Chamarel, and Seven Coloured Earth.</p>
+        <a href="booking.html?excursion=Wild South Discovery" class="btn">Book Now</a>
       </div>
 
       <div class="card">
         <img src="assets/transfer.jpg" alt="Airport Transfer" />
         <h3>Airport Transfer</h3>
-        <p>Comfortable private transfers anywhere in Mauritius.</p>
-        <a href="booking.html?excursion=Airport Transfer&price=800" class="btn">Book Now</a>
+        <p>Private transfers anywhere in Mauritius with comfort.</p>
+        <a href="booking.html?excursion=Airport Transfer" class="btn">Book Now</a>
       </div>
     </div>
   </section>
@@ -58,6 +56,7 @@
     <p>© 2025 Mautours | All rights reserved</p>
   </footer>
 
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <script defer src="js/main.js"></script>
 </body>
 </html>
