--- a/success.html
+++ b/success.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Payment Success | Mautours</title>
+  <title>Booking Successful | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="container center" style="margin-top: 100px;">
-    <h2>🎉 Payment Successful!</h2>
-    <p>Thank you for booking with Mautours.</p>
-    <p>We’ll send your confirmation shortly.</p>
-    <a href="index.html" class="btn" style="margin-top: 20px;">Back to Home</a>
+  <div class="container center">
+    <h1>🎉 Payment Successful!</h1>
+    <p>Thank you for booking with <strong>Mautours</strong>.</p>
+    <a href="index.html" class="btn">Back to Home</a>
   </div>
+
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <script defer src="js/main.js"></script>
 </body>
 </html>
