--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mautours – Mauritius Excursions & Transfers</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script defer src="js/main.js"></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
+    <div class="container between">
       <h1 class="logo">Mautours</h1>
       <nav class="nav">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="booking.html">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html">Dashboard</a>
@@ -23,40 +24,19 @@
     <div class="container center">
       <h2>Discover Mauritius with Mautours</h2>
       <p>Excursions • Airport Transfers • Private Tours</p>
+      <a href="booking.html" class="btn">View Packages</a>
     </div>
   </section>
 
-  <section class="excursions container">
-    <h2>Popular Excursions</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="assets/ile.jpg" alt="Île aux Cerfs" />
-        <h3>Île aux Cerfs Catamaran</h3>
-        <p>Full-day cruise with BBQ lunch and snorkeling.</p>
-        <a href="booking.html?excursion=Île aux Cerfs Catamaran" class="btn">Book Now</a>
-      </div>
-
-      <div class="card">
-        <img src="assets/wildsouth.jpg" alt="Wild South" />
-        <h3>Wild South Discovery</h3>
-        <p>Grand Bassin, Chamarel, and Seven Coloured Earth.</p>
-        <a href="booking.html?excursion=Wild South Discovery" class="btn">Book Now</a>
-      </div>
-
-      <div class="card">
-        <img src="assets/transfer.jpg" alt="Airport Transfer" />
-        <h3>Airport Transfer</h3>
-        <p>Private transfers anywhere in Mauritius with comfort.</p>
-        <a href="booking.html?excursion=Airport Transfer" class="btn">Book Now</a>
-      </div>
-    </div>
+  <section class="container">
+    <h2>Why Choose Us?</h2>
+    <p class="center">Experienced drivers, local guides, and safe travel around paradise.</p>
   </section>
 
   <footer class="footer">
-    <p>© 2025 Mautours | All rights reserved</p>
+    <p>© 2025 Mautours | <a href="about.html">About Us</a> | <a href="booking.html">Book</a> | <a href="login.html">Login</a></p>
   </footer>
 
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
-  <script defer src="js/main.js"></script>
 </body>
 </html>
