--- a/booking.html
+++ b/booking.html
@@ -3,18 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Book Your Excursion | Mautours</title>
+  <title>Book Now | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script type="module" src="js/booking.js" defer></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
+    <div class="container between">
       <h1 class="logo">Mautours</h1>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="booking.html" class="active">Book</a>
+        <a href="login.html">Login</a>
+        <a href="admin.html">Dashboard</a>
+      </nav>
     </div>
   </header>
 
-  <section class="container form-section">
-    <h2>Book Your Excursion</h2>
+  <section class="container">
+    <h2>Available Packages</h2>
+    <div class="cards" id="packages">
+      <div class="card">
+        <img src="assets/ile.jpg" alt="Île aux Cerfs" />
+        <h3>Île aux Cerfs Catamaran</h3>
+        <p>Full-day cruise | BBQ lunch | Snorkeling.</p>
+        <p class="price">Rs 3 400</p>
+        <button class="btn" onclick="selectPackage('Île aux Cerfs Catamaran',3400)">Book Now</button>
+      </div>
+
+      <div class="card">
+        <img src="assets/wildsouth.jpg" alt="Wild South" />
+        <h3>Wild South Discovery</h3>
+        <p>Grand Bassin | Chamarel | 7 Coloured Earth.</p>
+        <p class="price">Rs 6 300</p>
+        <button class="btn" onclick="selectPackage('Wild South Discovery',6300)">Book Now</button>
+      </div>
+
+      <div class="card">
+        <img src="assets/transfer.jpg" alt="Airport Transfer" />
+        <h3>Airport Transfer</h3>
+        <p>Private transfer anywhere in Mauritius.</p>
+        <p class="price">Rs 1 300</p>
+        <button class="btn" onclick="selectPackage('Airport Transfer',1300)">Book Now</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="container form-section hidden" id="checkoutSection">
+    <h2>Checkout</h2>
     <form id="bookingForm">
       <label>Full Name <input type="text" id="name" required /></label>
       <label>Email <input type="email" id="email" required /></label>
@@ -22,15 +58,15 @@
       <label>Excursion <input type="text" id="excursion" readonly /></label>
       <label>Date <input type="date" id="date" required /></label>
       <label>Number of People <input type="number" id="people" min="1" required /></label>
+      <label>Total (MUR) <input type="text" id="total" readonly /></label>
       <button type="submit" class="btn">Proceed to Payment</button>
     </form>
   </section>
 
   <footer class="footer">
-    <p>© 2025 Mautours</p>
+    <p>© 2025 Mautours | <a href="index.html">Home</a> | <a href="login.html">Login</a></p>
   </footer>
 
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
-  <script type="module" src="js/booking.js" defer></script>
 </body>
 </html>
