--- a/success.html
+++ b/success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Booking Successful | Mautours</title>
+  <title>Payment Success | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -12,8 +12,9 @@
     <p>Thank you for booking with <strong>Mautours</strong>.</p>
     <a href="index.html" class="btn">Back to Home</a>
   </div>
-
+  <footer class="footer">
+    <p>© 2025 Mautours | <a href="booking.html">Book Again</a></p>
+  </footer>
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
-  <script defer src="js/main.js"></script>
 </body>
 </html>
