--- a/admin.html
+++ b/admin.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script type="module" src="js/admin.js" defer></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
+    <div class="container between">
       <h1 class="logo">Mautours Dashboard</h1>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="booking.html">Book</a>
+        <a href="login.html">Logout</a>
+      </nav>
     </div>
   </header>
 
@@ -31,7 +37,10 @@
     </table>
   </section>
 
+  <footer class="footer">
+    <p>© 2025 Mautours | <a href="index.html">Home</a></p>
+  </footer>
+
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
-  <script type="module" src="js/admin.js" defer></script>
 </body>
 </html>
