--- a/booking.html
+++ b/booking.html
@@ -32,7 +32,18 @@
           <h3>Île aux Cerfs Catamaran</h3>
           <p>Full-day luxury catamaran cruise with BBQ lunch and snorkeling stop at Île aux Cerfs Lagoon.</p>
           <span class="price">Rs 3,400</span>
-          <button class="btn-outline" onclick="selectPackage('Île aux Cerfs Catamaran', 3400)">Book Now</button>
+          <div class="buttons">
+            <button class="btn-outline" onclick="toggleDetails(this)">View Details</button>
+            <button class="btn-outline" onclick="selectPackage('Île aux Cerfs Catamaran', 3400)">Book Now</button>
+          </div>
+          <div class="details hidden">
+            <ul>
+              <li>Departure: Trou D’Eau Douce at 9:00 AM</li>
+              <li>Snorkeling stop at Grand River South East</li>
+              <li>Buffet BBQ lunch and drinks included</li>
+              <li>Return around 4:00 PM</li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -43,7 +54,18 @@
           <h3>Wild South Discovery</h3>
           <p>Explore Grand Bassin, Chamarel, Black River Gorges, and the iconic Seven Coloured Earth.</p>
           <span class="price">Rs 6,300</span>
-          <button class="btn-outline" onclick="selectPackage('Wild South Discovery', 6300)">Book Now</button>
+          <div class="buttons">
+            <button class="btn-outline" onclick="toggleDetails(this)">View Details</button>
+            <button class="btn-outline" onclick="selectPackage('Wild South Discovery', 6300)">Book Now</button>
+          </div>
+          <div class="details hidden">
+            <ul>
+              <li>Private car with driver for the day</li>
+              <li>Visit Chamarel Waterfall and Seven Coloured Earth</li>
+              <li>Stop at Grand Bassin (Sacred Lake)</li>
+              <li>Lunch available at local restaurant (optional)</li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -54,7 +76,17 @@
           <h3>Airport Transfer</h3>
           <p>Private, air-conditioned transfer anywhere on the island. Reliable and professional service.</p>
           <span class="price">Rs 1,300</span>
-          <button class="btn-outline" onclick="selectPackage('Airport Transfer', 1300)">Book Now</button>
+          <div class="buttons">
+            <button class="btn-outline" onclick="toggleDetails(this)">View Details</button>
+            <button class="btn-outline" onclick="selectPackage('Airport Transfer', 1300)">Book Now</button>
+          </div>
+          <div class="details hidden">
+            <ul>
+              <li>Pick-up and drop-off anywhere in Mauritius</li>
+              <li>Comfortable A/C vehicle with experienced driver</li>
+              <li>24/7 service available upon request</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
