--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script defer src="js/main.js"></script>
 </head>
 <body>
+  <!-- Header -->
   <header class="site-header">
     <div class="container between">
       <h1 class="logo">Mautours</h1>
@@ -23,59 +24,73 @@
     </div>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero fade-in">
+    <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h2>Explore Paradise with Mautours</h2>
-      <p>Book unforgettable excursions and island experiences in Mauritius.</p>
+      <h2>Welcome to Mautours 🌴</h2>
+      <p>Discover Mauritius like never before — beaches, lagoons, and adventures crafted for you.</p>
       <a href="booking.html" class="btn">Start Your Journey</a>
     </div>
   </section>
 
+  <!-- About Us -->
   <section class="container about fade-in">
     <h2>About Us</h2>
-    <p>Mautours is your trusted local travel partner for exploring the wonders of Mauritius.
-       From pristine beaches to lush forests, we craft personalized adventures to make your stay unforgettable.</p>
+    <p>
+      At <strong>Mautours</strong>, we believe every traveler deserves a unique experience.
+      From serene catamaran cruises to breathtaking mountain drives, we design each trip
+      to showcase the heart and soul of Mauritius.
+    </p>
   </section>
 
+  <!-- Highlights -->
   <section class="container highlights fade-in">
-    <h2>Popular Experiences</h2>
+    <h2>Our Most Loved Experiences</h2>
     <div class="cards">
       <div class="card">
         <img src="assets/ile.jpg" alt="Île aux Cerfs" />
         <h3>Île aux Cerfs Catamaran</h3>
-        <p>Crystal lagoons, BBQ lunch and sun-filled adventure.</p>
+        <p>Glide across turquoise lagoons, enjoy a BBQ lunch and relax on paradise beaches.</p>
       </div>
       <div class="card">
         <img src="assets/wildsouth.jpg" alt="Wild South" />
         <h3>Wild South Discovery</h3>
-        <p>Chamarel, Black River Gorges & Seven Coloured Earth.</p>
+        <p>Witness waterfalls, sacred lakes, and volcanic landscapes on this scenic island tour.</p>
       </div>
       <div class="card">
         <img src="assets/transfer.jpg" alt="Transfer" />
-        <h3>Airport Transfer</h3>
-        <p>Reliable and comfortable transfers anywhere on the island.</p>
+        <h3>Airport Transfers</h3>
+        <p>Reliable, comfortable, and friendly transfer service to any destination in Mauritius.</p>
       </div>
     </div>
     <div class="center">
-      <a href="booking.html" class="btn-outline">See All Packages</a>
+      <a href="booking.html" class="btn-outline">View All Packages</a>
     </div>
   </section>
 
+  <!-- Contact -->
   <section class="contact fade-in">
     <div class="container">
-      <h2>Contact Us</h2>
-      <p>Ready to plan your next adventure? We’d love to hear from you!</p>
+      <h2>Get in Touch</h2>
+      <p>Ready to plan your dream trip? Let’s talk!</p>
       <form id="contactForm">
         <input type="text" placeholder="Your Name" required />
         <input type="email" placeholder="Your Email" required />
         <textarea placeholder="Your Message" rows="4" required></textarea>
         <button class="btn">Send Message</button>
       </form>
+      <div class="contact-details">
+        <p>📍 Ebene, Mauritius</p>
+        <p>📞 +230 5254 2792</p>
+        <p>✉️ info@mautours.mu</p>
+      </div>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
-    <p>© 2025 Mautours | <a href="index.html">Home</a> | <a href="booking.html">Book</a></p>
+    <p>© 2025 Mautours | Crafted with ❤️ in Mauritius</p>
   </footer>
 
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
