--- a/booking.html
+++ b/booking.html
@@ -11,21 +11,23 @@
   <header class="site-header">
     <div class="container between">
       <h1 class="logo">Mautours</h1>
-      <nav class="nav">
+      <nav class="nav" id="navMenu">
         <a href="index.html">Home</a>
         <a href="booking.html" class="active">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html">Dashboard</a>
       </nav>
+      <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+      </div>
     </div>
   </header>
 
-  <section class="container">
+  <section class="container fade-in">
     <h2 class="center">Our Exclusive Packages</h2>
     <p class="center muted">Choose your adventure and book in just a few clicks</p>
 
     <div class="package-list">
-      <!-- Package 1 -->
       <div class="package-card">
         <img src="assets/ile.jpg" alt="Île aux Cerfs" />
         <div class="package-info">
@@ -47,7 +49,6 @@
         </div>
       </div>
 
-      <!-- Package 2 -->
       <div class="package-card">
         <img src="assets/wildsouth.jpg" alt="Wild South" />
         <div class="package-info">
@@ -69,7 +70,6 @@
         </div>
       </div>
 
-      <!-- Package 3 -->
       <div class="package-card">
         <img src="assets/transfer.jpg" alt="Airport Transfer" />
         <div class="package-info">
@@ -92,7 +92,7 @@
     </div>
   </section>
 
-  <section class="container form-section hidden" id="checkoutSection">
+  <section class="container form-section hidden fade-in" id="checkoutSection">
     <h2>Checkout</h2>
     <form id="bookingForm">
       <label>Full Name <input type="text" id="name" required /></label>
