--- a/login.html
+++ b/login.html
@@ -11,29 +11,29 @@
   <header class="site-header">
     <div class="container between">
       <h1 class="logo">Mautours</h1>
-      <nav class="nav">
+      <nav class="nav" id="navMenu">
         <a href="index.html">Home</a>
         <a href="booking.html">Book</a>
         <a href="login.html" class="active">Login</a>
         <a href="admin.html">Dashboard</a>
       </nav>
+      <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+      </div>
     </div>
   </header>
 
-  <section class="container form-section">
-    <h2>Login or Sign Up</h2>
-    <form id="authForm">
-      <label>Email <input type="email" id="authEmail" required /></label>
-      <label>Password <input type="password" id="authPassword" required /></label>
-      <button id="loginBtn" class="btn">Login</button>
-      <button id="signupBtn" class="btn-outline" type="button">Sign Up</button>
+  <section class="container fade-in">
+    <h2 class="center">Login to Mautours</h2>
+    <form id="loginForm">
+      <label>Email <input type="email" id="email" required /></label>
+      <label>Password <input type="password" id="password" required /></label>
+      <button type="submit" class="btn">Login</button>
     </form>
   </section>
 
   <footer class="footer">
-    <p>© 2025 Mautours | <a href="index.html">Home</a> | <a href="booking.html">Book</a></p>
+    <p>© 2025 Mautours | Discover Mauritius</p>
   </footer>
-
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
 </body>
 </html>
