--- a/success.html
+++ b/success.html
@@ -3,18 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Payment Success | Mautours</title>
+  <title>Payment Successful | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="container center">
-    <h1>🎉 Payment Successful!</h1>
-    <p>Thank you for booking with <strong>Mautours</strong>.</p>
+  <div class="container center fade-in" style="padding: 4rem 0;">
+    <h2>🎉 Payment Successful!</h2>
+    <p>Thank you for booking with <strong>Mautours</strong>. We’ll contact you soon with all details.</p>
     <a href="index.html" class="btn">Back to Home</a>
   </div>
-  <footer class="footer">
-    <p>© 2025 Mautours | <a href="booking.html">Book Again</a></p>
-  </footer>
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
 </body>
 </html>
