--- a/booking.html
+++ b/booking.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book an Excursion | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
-  <script type="module" src="js/booking.js" defer></script>
+  <script type="module" src="js/booking.js"></script>
 </head>
 <body>
   <header class="site-header">
@@ -21,31 +21,19 @@
         <span></span><span></span><span></span>
       </div>
     </div>
-  </header> 
+  </header>
 
   <section class="container fade-in">
     <h2 class="center">Our Exclusive Packages</h2>
-    <p class="center muted">Choose your adventure and book in just a few clicks</p>
 
     <div class="package-list">
       <div class="package-card">
         <img src="assets/ile.jpg" alt="Île aux Cerfs" />
         <div class="package-info">
           <h3>Île aux Cerfs Catamaran</h3>
-          <p>Full-day luxury catamaran cruise with BBQ lunch and snorkeling stop at Île aux Cerfs Lagoon.</p>
+          <p>Luxury catamaran cruise, BBQ lunch & snorkeling.</p>
           <span class="price">Rs 3,400</span>
-          <div class="buttons">
-            <button class="btn-outline" onclick="toggleDetails(this)">View Details</button>
-            <button class="btn-outline" onclick="selectPackage('Île aux Cerfs Catamaran', 3400)">Book Now</button>
-          </div>
-          <div class="details hidden">
-            <ul>
-              <li>Departure: Trou D’Eau Douce at 9:00 AM</li>
-              <li>Snorkeling stop at Grand River South East</li>
-              <li>Buffet BBQ lunch and drinks included</li>
-              <li>Return around 4:00 PM</li>
-            </ul>
-          </div>
+          <button class="btn-outline" onclick="selectPackage('Île aux Cerfs Catamaran', 3400)">Book Now</button>
         </div>
       </div>
 
@@ -53,20 +41,9 @@
         <img src="assets/wildsouth.jpg" alt="Wild South" />
         <div class="package-info">
           <h3>Wild South Discovery</h3>
-          <p>Explore Grand Bassin, Chamarel, Black River Gorges, and the iconic Seven Coloured Earth.</p>
+          <p>Explore Chamarel, Black River Gorges & Grand Bassin.</p>
           <span class="price">Rs 6,300</span>
-          <div class="buttons">
-            <button class="btn-outline" onclick="toggleDetails(this)">View Details</button>
-            <button class="btn-outline" onclick="selectPackage('Wild South Discovery', 6300)">Book Now</button>
-          </div>
-          <div class="details hidden">
-            <ul>
-              <li>Private car with driver for the day</li>
-              <li>Visit Chamarel Waterfall and Seven Coloured Earth</li>
-              <li>Stop at Grand Bassin (Sacred Lake)</li>
-              <li>Lunch available at local restaurant (optional)</li>
-            </ul>
-          </div>
+          <button class="btn-outline" onclick="selectPackage('Wild South Discovery', 6300)">Book Now</button>
         </div>
       </div>
 
@@ -74,19 +51,9 @@
         <img src="assets/transfer.jpg" alt="Airport Transfer" />
         <div class="package-info">
           <h3>Airport Transfer</h3>
-          <p>Private, air-conditioned transfer anywhere on the island. Reliable and professional service.</p>
+          <p>Private transfers anywhere on the island.</p>
           <span class="price">Rs 1,300</span>
-          <div class="buttons">
-            <button class="btn-outline" onclick="toggleDetails(this)">View Details</button>
-            <button class="btn-outline" onclick="selectPackage('Airport Transfer', 1300)">Book Now</button>
-          </div>
-          <div class="details hidden">
-            <ul>
-              <li>Pick-up and drop-off anywhere in Mauritius</li>
-              <li>Comfortable A/C vehicle with experienced driver</li>
-              <li>24/7 service available upon request</li>
-            </ul>
-          </div>
+          <button class="btn-outline" onclick="selectPackage('Airport Transfer', 1300)">Book Now</button>
         </div>
       </div>
     </div>
@@ -101,15 +68,4 @@
       <label>Excursion <input type="text" id="excursion" readonly /></label>
       <label>Date <input type="date" id="date" required /></label>
       <label>Number of People <input type="number" id="people" min="1" required /></label>
-      <label>Total (MUR) <input type="text" id="total" readonly /></label>
-      <button type="submit" class="btn">Proceed to Payment</button>
-    </form>
-  </section>
-
-  <footer class="footer">
-    <p>© 2025 Mautours | <a href="index.html">Home</a> | <a href="login.html">Login</a></p>
-  </footer>
-
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
-</body>
-</html>
+      <label>Total (MUR) <input type=
