--- a/booking.html
+++ b/booking.html
@@ -6,6 +6,8 @@
   <title>Book an Excursion | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
   <script type="module" src="js/booking.js"></script>
+  <script defer src="js/main.js"></script>
+
 </head>
 <body>
   <header class="site-header">
