--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
-  <script type="module" src="js/admin.js" defer></script>
+  <script type="module" src="js/admin.js"></script>
+  <script defer src="js/main.js"></script>
+
 </head>
 <body>
   <header class="site-header">
